k8s-practice/Practice/nginx-ingress/deployment-phppgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phppgadmin
  labels:
    env: dev
    app: phppgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phppgadmin
  template:
    metadata:
      labels:
        app: phppgadmin
    spec:
      containers:
      - name: phppgadmin
        image: bitnami/phppgadmin:latest
        imagePullPolicy: Always
        ports:
        - name: phppgadmin
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: phppgadmin
spec:
  selector:
    app: phppgadmin
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: phppgadmin
  selector:
    app: phppgadmin
